mp5/.svn/text-base/grade_report_final.txt.svn-base
Grading revision r33739 by ziyunhe2, dated 2015-04-03 12:48:19.000037259 -0500 CDT
Monad Autograder
Testing mp5 at 2015-04-04 00:45:15

"You *could* call it an ape, and that an ape, but that would just be phylogenic pettifogging." ~ D.A. Forsyth

Setting up test environment...
Compiling...
================================================================


Running tests...
================================================================
test_default_ctor  . . . . [1 pts] - passed
test_ctor_1  . . . . . . . [1 pts] - passed
test_ctor_2  . . . . . . . [2 pts] - passed
test_buildTree_1 . . . . . [2 pts] - passed
test_buildTree_2 . . . . . [1 pts] - passed
test_buildTree_3 . . . . . [2 pts] - passed
test_cctor_1 . . . . . . . [1 pts] - passed
test_cctor_2 . . . . . . . [1 pts] - passed
test_cctor_3 . . . . . . . [1 pts] - passed
test_cctor_4 . . . . . . . [1 pts] - passed
test_assign_op_1 . . . . . [1 pts] - passed
test_assign_op_2 . . . . . [1 pts] - passed
test_assign_op_3 . . . . . [1 pts] - passed
test_assign_op_4 . . . . . [1 pts] - passed
test_getPixel_1  . . . . . [1 pts] - passed
test_getPixel_2  . . . . . [2 pts] - passed
test_getPixel_3  . . . . . [2 pts] - passed
test_getPixel_4  . . . . . [2 pts] - passed
test_decompress_unpruned_1 [1 pts] - passed
test_decompress_unpruned_2 [1 pts] - passed
test_decompress_unpruned_3 [1 pts] - passed
test_decompress_unpruned_4 [1 pts] - passed
time_getPixel_logn . . . . [4 pts] - passed
time_decompress_n (asan) . [4 pts] - passed
valgrind_big3 (asan) . . . [4 pts] - passed
test_clockwiseRotate_1 . . [1 pts] - passed
test_clockwiseRotate_2 . . [1 pts] - passed
test_clockwiseRotate_3 . . [2 pts] - passed
test_clockwiseRotate_4 . . [2 pts] - passed
test_prune_1 . . . . . . . [2 pts] - passed
test_prune_2 . . . . . . . [3 pts] - passed
test_prune_3 . . . . . . . [2 pts] - passed
test_prune_4 . . . . . . . [5 pts] - passed
test_prune_copy  . . . . . [2 pts] - passed
test_prune_rotate  . . . . [2 pts] - passed
test_prune_getPixel  . . . [3 pts] - passed
test_pruneSize_1 . . . . . [2 pts] - passed
test_pruneSize_2 . . . . . [2 pts] - passed
test_pruneSize_3 . . . . . [2 pts] - passed
test_pruneSize_4 . . . . . [2 pts] - passed
test_pruneSize_5 . . . . . [2 pts] - passed
test_idealPrune_1  . . . . [2 pts] - passed
test_idealPrune_2  . . . . [3 pts] - passed
test_idealPrune_3  . . . . [2 pts] - passed
test_idealPrune_4  . . . . [5 pts] - passed
val_clockwiseRotate (asan) [2 pts] - passed
val_prune (asan) . . . . . [4 pts] - passed
val_idealPrune (asan)  . . [3 pts] - passed
test_const_correctness . . [4 pts] - FAILED: unit_tests.cpp:515: [system("clang++ -stdlib=libc++ -std=c++1y -c -w main2.cpp") => 1] != [0 => 0]


Total score...
================================================================
TOTAL SCORE: 96



Detailed test output...
================================================================
----------------------------------------------------------------
test_const_correctness [4 points]
Result: FAILED: unit_tests.cpp:515: [system("clang++ -stdlib=libc++ -std=c++1y -c -w main2.cpp") => 1] != [0 => 0]
Took 0ms (20000ms timeout)
Output:
----------------------------------------------------------------
main2.cpp:19:16: error: no matching constructor for initialization of 'Quadtree'
   first = new Quadtree(constPNG, 128);
               ^        ~~~~~~~~~~~~~
./quadtree.h:20:2: note: candidate constructor not viable: 1st argument ('const PNG') would lose const qualifier
        Quadtree(PNG &sourse, int resolution);
        ^
./quadtree.h:21:2: note: candidate constructor not viable: requires single argument 'other', but 2 arguments were provided
        Quadtree(Quadtree const &other);
        ^
./quadtree.h:19:2: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
        Quadtree();
        ^
1 error generated.


----------------------------------------------------------------
Total score...
================================================================
TOTAL SCORE: 96

